--- a/Abhishek_Krishna_A_M/package.json
+++ b/Abhishek_Krishna_A_M/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d docs"
+    }
   },
   "dependencies": {
     "lucide-react": "^0.314.0",
