--- a/Abhishek_Krishna_A_M/package.json
+++ b/Abhishek_Krishna_A_M/package.json
@@ -8,9 +8,9 @@
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d docs"
-    }
   },
   "dependencies": {
+    "gh-pages": "^6.1.0", // Add this line
     "lucide-react": "^0.314.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
