--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,7 @@
-name: Deploy
-on: [push]
+name: Deploy to GitHub Pages
+on:
+  push:
+    branches: [main]
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -12,11 +14,8 @@ jobs:
           cd Abhishek_Krishna_A_M
           npm install
           npm run build
-      - name: Deploy to GH Pages
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          cd Abhishek_Krishna_A_M
-          git add docs
-          git commit -m "Deploy to GitHub Pages"
-          git push
+          touch docs/.nojekyll # Disable Jekyll processing
+      - uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./Abhishek_Krishna_A_M/docs
