--- a/Nikitha/package.json
+++ b/Nikitha/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/roboto": "^5.2.5",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-tsparticles": "^2.12.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
