--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "prebuild": "chmod -R +x node_modules/.bin",
+  "build": "vite build",
+  "dev": "vite",
+  "preview": "vite preview",
+  "lint": "eslint ."
   },
   "dependencies": {
     "react": "^19.1.0",
@@ -28,3 +30,4 @@
     "vite": "^6.3.5"
   }
 }
+
