--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview",
     "type-check": "tsc --noEmit"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
     "class-variance-authority": "^0.7.1",
@@ -36,3 +39,4 @@
     "vite": "^6.3.5"
   }
 }
+
