--- a/todo-app-react/package.json
+++ b/todo-app-react/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "vite",
+    "prebuild": "chmod +x node_modules/.bin/vite",
     "build": "vite build",
     "preview": "vite preview"
   },
